[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "retinoextract"
authors = [
    {name = "Fareeha Jabeen", email = fareeha@mcs.nust.edu.pk"},
]
description = "A professional medical image feature extraction toolbox"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["medical imaging", "feature extraction", "retinal analysis"]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
]
dynamic = ["version"]

[tool.setuptools_scm]
write_to = "RetinoExtractToolbox/_version.py"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers --cov=retinoextract --cov-report=term-missing"
testpaths = ["tests"]
